--- a/topcountry/package.json
+++ b/topcountry/package.json
@@ -10,8 +10,12 @@
     "type": "git",
     "url": ""
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "alrocar",
-  "license": "APACHE2"
+  "license": "APACHE2",
+  "dependencies": {
+    "cheerio": "^0.19.0",
+    "fs": "0.0.2",
+    "request": "^2.58.0"
+  }
 }
