--- a/topcountry/package.json
+++ b/topcountry/package.json
@@ -4,7 +4,7 @@
   "description": "Scraps http://socialblade.com/youtube/top/country/COUNTRY_CODE pages from SocialBlade",
   "main": "socialblade-topcountry.js",
   "scripts": {
-    "test": "echo \"node socialblade-topcountry.js US\" && exit 1"
+    "test": "node socialblade-topcountry.js US"
   },
   "repository": {
     "type": "git",
