--- a/topcountry/package.json
+++ b/topcountry/package.json
@@ -17,5 +17,9 @@
     "cheerio": "^0.19.0",
     "fs": "0.0.2",
     "request": "^2.58.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/alrocar/socialblade-scrapper/issues"
+  },
+  "homepage": "https://github.com/alrocar/socialblade-scrapper"
 }
