--- a/topchannel/package.json
+++ b/topchannel/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/alrocar/socialblade-scrapper",
   "dependencies": {
     "fs": "0.0.2",
-    "request": "^2.58.0"
+    "request": "^2.58.0",
+    "sync-request": "^2.0.1"
   }
 }
