--- a/topcountry/package.json
+++ b/topcountry/package.json
@@ -10,13 +10,20 @@
     "type": "git",
     "url": "https://github.com/alrocar/socialblade-scrapper"
   },
-  "keywords": ["socialblade", "youtube", "topchannels", "topvideos"],
+  "keywords": [
+    "socialblade",
+    "youtube",
+    "topchannels",
+    "topvideos"
+  ],
   "author": "https://github.com/alrocar",
   "license": "APACHE2",
   "dependencies": {
     "cheerio": "^0.19.0",
     "fs": "0.0.2",
-    "request": "^2.58.0"
+    "request": "^2.58.0",
+    "sleep": "^2.0.0",
+    "sync-request": "^2.0.1"
   },
   "bugs": {
     "url": "https://github.com/alrocar/socialblade-scrapper/issues"
